# heren-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PLAN_TOOLS.md  README.en.md  README.md  banner.md  benchmark_comparison.json  benchmark_results.json  create_base_scene.py  create_scene.gd  install.py  pyproject.toml  requirements.txt  run.bat  test_heren.py  test_mcp.bat  test_simple.py
.temp/: bridge_stdout.txt  debug_script.gd  test_direct.gd  test_output.txt  test_simple.gd
benchmarks/: BENCHMARKS.md  __init__.py  benchmark_cache.py  benchmark_comparison.py  benchmark_real_comparison.py  benchmark_tools.py  benchmark_vs_competitors.py  run_benchmarks.py  test_direct.py  test_godot.py  test_http.py  test_mainloop.py  test_netstat.py  test_port.py  test_ports.py  test_realtime.py  test_select.py  test_server.py  test_server_output.py  test_simple.gd  test_simple.py  test_simple_server.gd  test_socket.py
docs/: API.es.md  API.md  ARCHITECTURE.md  INSTALL.es.md  INSTALL.md  TROUBLESHOOTING.md
heren_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/heren/: __init__.py  server.py
src/heren/bridges/: heren_bridge.gd
src/heren/core/: godot_server.py  session_manager.py
src/heren/daemon/: __init__.py  daemon_utils.gd  godot_daemon.py  heren_animation_ops.gd  heren_core_utils.gd  heren_daemon.gd  heren_debug_ops.gd  heren_project_ops.gd  heren_resource_ops.gd  heren_scene_ops.gd  heren_server_manager.gd  heren_shader_ops.gd  heren_tscn_serializer.gd  heren_window_manager.gd
src/heren/i18n/: __init__.py  en.json  es.json
src/heren/interfaces/: godot_cli.py
src/heren/server/: heren_server.gd
src/heren/templates/: gdscript_templates.py
src/heren/tools/: __init__.py  animation_tool.py  batch_tools.py  debug_tool.py  global_tool.py  node_tool.py  node_tools.py  project_tool.py  resource_tool.py  scene_tool.py  scene_tools.py  scene_tools.py.backup  session_tool.py  shader_tool.py  signal_tool.py  skeleton_tool.py  tilemap_tool.py  tools_index.py  validate_tool.py  visual_tools.py
tests/: __init__.py  conftest.py  test_daemon.py  test_mcp_protocol.py  test_mcp_stdio.py
tests/test_core/: __init__.py  test_cache.py  test_session_manager.py
tests/test_integration/: __init__.py  test_competitor_comparison.py  test_full_workflow.py
tests/test_tools/: __init__.py  test_all_tools.py  test_node_tool.py  test_scene_tool.py  test_session_tool.py
